--- a/app/src/main/res/layout/activity_part_practice_ods1.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods1.xml
@@ -12,12 +12,12 @@
         android:id="@+id/playVib"
         android:layout_width="70dp"
         android:layout_height="51dp"
-        android:theme="@style/AppTheme.BlueRipple"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_telephone"
-        app:layout_constraintRight_toRightOf="@+id/odsfirstscore"
-        app:layout_constraintHorizontal_chainStyle="packed"
+        android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintRight_toRightOf="@+id/odsfirstscore"
         app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
 
     <Button
@@ -45,7 +45,7 @@
 
     <Button
         android:id="@+id/pitchButton1"
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
@@ -60,7 +60,7 @@
 
     <Button
         android:id="@+id/pitchbutton2"
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
@@ -74,9 +74,8 @@
 
     <Button
         android:id="@+id/pitchbutton3"
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="산"
@@ -89,7 +88,7 @@
 
     <Button
         android:id="@+id/pitchbutton4"
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
@@ -103,7 +102,7 @@
 
     <Button
         android:id="@+id/pitchbutton5"
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
@@ -111,6 +110,7 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pitchbutton4"
         app:layout_constraintTop_toBottomOf="@+id/odsfirstscore" />
@@ -119,7 +119,6 @@
         android:id="@+id/pitchbutton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="옹"
@@ -135,7 +134,6 @@
         android:id="@+id/pitchbutton7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="달"
@@ -225,6 +223,5 @@
         app:layout_constraintTop_toBottomOf="@+id/odsfirstscore"
         app:layout_constraintVertical_bias="0.768"
         app:srcCompat="@android:drawable/ic_media_next" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
