--- a/app/src/main/res/layout/activity_part_practice_ods6.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods6.xml
@@ -230,5 +230,25 @@
         app:layout_constraintVertical_bias="0.768"
         app:srcCompat="@android:drawable/ic_media_next" />
 
+    <ImageButton
+        android:id="@+id/last"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="200dp"
+        android:background="?selectableItemBackground"
+        android:onClick="onClick_last"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/ic_media_previous"
+        android:tint="#9C27B0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/pitchbutton5"
+        app:layout_constraintEnd_toStartOf="@+id/next"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/odssixthscore"
+        app:layout_constraintVertical_bias="0.77" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
