--- a/app/src/main/res/layout/activity_low_choice_song.xml
+++ b/app/src/main/res/layout/activity_low_choice_song.xml
@@ -10,22 +10,20 @@
 
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="501dp"
-        android:layout_height="57dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="536dp"
         android:background="@drawable/buttonblack"
-        app:layout_constraintBottom_toTopOf="@+id/song_button3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.604"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/song_ods"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/song_button2"
+        app:layout_constraintTop_toBottomOf="@+id/song_plane" />
 
     <Button
         android:id="@+id/song_plane"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
@@ -34,15 +32,17 @@
         android:text="@string/strBtn1"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/song_button2"
-        android:layout_width="447dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginBottom="533dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
@@ -51,15 +51,16 @@
         android:text="@string/strBtn2"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/song_plane" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/song_button3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="49dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
@@ -68,20 +69,19 @@
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/song_button2" />
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
-<!--    <Button-->
-<!--        android:id="@+id/backtolevel"-->
-<!--        android:layout_width="70dp"-->
-<!--        android:layout_height="51dp"-->
-<!--        android:background="?selectableItemBackground"-->
-<!--        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"-->
-<!--        android:theme="@style/AppTheme.BlueRipple"-->
-<!--        app:layout_constraintHorizontal_chainStyle="packed"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/textView2" />-->
-
+    <!--    <Button-->
+    <!--        android:id="@+id/backtolevel"-->
+    <!--        android:layout_width="70dp"-->
+    <!--        android:layout_height="51dp"-->
+    <!--        android:background="?selectableItemBackground"-->
+    <!--        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"-->
+    <!--        android:theme="@style/AppTheme.BlueRipple"-->
+    <!--        app:layout_constraintHorizontal_chainStyle="packed"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/textView2" />-->
+    <!--
     <CheckBox
         android:id="@+id/woman"
         android:layout_width="wrap_content"
@@ -103,19 +103,45 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/woman" />
+        -->
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="134dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="41dp"
         android:text="음역대 선택"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/man"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/song_button2" /> />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="4dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView2">
+
+        <RadioButton
+            android:id="@+id/man"
+            android:layout_width="73dp"
+            android:layout_height="match_parent"
+            android:text="남자" />
+
+        <RadioButton
+            android:id="@+id/woman"
+            android:layout_width="71dp"
+            android:layout_height="match_parent"
+            android:text="여자" />
+    </RadioGroup>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
