곰세마리 이전/다음버튼 위치 수정, 높아요/낮아요/정확해요 수정

--- a/app/src/main/res/layout/activity_part_practice_bear1.xml
+++ b/app/src/main/res/layout/activity_part_practice_bear1.xml
@@ -56,7 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
-        app:layout_constraintTop_toBottomOf="@+id/bearfirstscore"
+        app:layout_constraintTop_toBottomOf="@+id/bearthirdscore"
         app:layout_constraintVertical_bias="0.768"
         app:srcCompat="@android:drawable/ic_media_next" />
 
