--- a/app/src/main/res/layout/activity_part_practice_bear3.xml
+++ b/app/src/main/res/layout/activity_part_practice_bear3.xml
@@ -12,12 +12,11 @@
         android:id="@+id/playVib"
         android:layout_width="70dp"
         android:layout_height="51dp"
-        android:theme="@style/AppTheme.BlueRipple"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_telephone"
-        app:layout_constraintRight_toRightOf="@+id/bearthirdscore"
+        android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintRight_toRightOf="@+id/bearthirdscore"
         app:layout_constraintTop_toTopOf="@+id/bearthirdscore" />
 
     <Button
@@ -57,7 +56,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
         app:layout_constraintTop_toBottomOf="@+id/bearthirdscore"
-        app:layout_constraintVertical_bias="0.768"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_media_next" />
 
     <ImageButton
@@ -78,7 +77,7 @@
         app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bearthirdscore"
-        app:layout_constraintVertical_bias="0.77" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/pitchButton1"
@@ -198,13 +197,11 @@
         app:layout_constraintTop_toBottomOf="@+id/pitchbutton4" />
 
 
-
     <TextView
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="1.0"
         android:textColor="#000000"
         android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/highpitch"
@@ -217,7 +214,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/scdream2"
-        android:text="Too high!"
+        android:text="높아요!"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/pitchline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -239,7 +236,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:fontFamily="@font/scdream2"
-        android:text="Too low!"
+        android:text="낮아요!"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
